2005-04-01  Richard Taylor <rjt-gramps@thegrindstone.me.uk>
	* src/ImageSelect.py (Gallery.on_drag_begin): tiny fix to correct image dnd

2005-04-01  Richard Taylor <rjt-gramps@thegrindstone.me.uk>
	* src/plugins/ScratchPad.py (ScratchPadListView.register_wrapper_classes,
	ScratchPadName): added support for Names
	* src/EditPerson.py (EditPerson.__init__, EditPerson.name_drag_data_get,
	EditPerson.name_drag_begin, EditPerson.name_drag_data_received): added dnd for Names
	* src/DdTargets.py (_DdTargets.__init__, _DdTargets.all_gramps_types, 
	_DdTargets.all_gramps_targets): added Names as dnd target.
	
2005-04-01  Richard Taylor <rjt-gramps@thegrindstone.me.uk>
	* src/plugins/ScratchPad.py: changed pickle to cPickle. cPickle is much faster.
	* src/EditPerson.py: changed pickle to cPickle. cPickle is much faster.
	* src/EditPlace.py: changed pickle to cPickle. cPickle is much faster.
	* src/Marriage.py: changed pickle to cPickle. cPickle is much faster.
	* src/Sources.py: changed pickle to cPickle. cPickle is much faster.


2005-04-01  Richard Taylor <rjt-gramps@thegrindstone.me.uk>
	* src/plugins/ScratchPad.py (ScratchPadListView.object_drag_data_received,
	ScratchPadListView.on_object_select_row): disables drop that originates from the
	pad itself and enabled dropping into the correct row as indicated by the 
	UI.
	
2005-04-01  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/plugins/Check.py: new database callback scheme; Use Utils.family_name.
	* src/plugins/ChangeNames.py: new database callback scheme
	* src/plugins/TestcaseGenerator.py: new database callback scheme

	* src/plugins/TestcaseGenerator.py: Added generation of invalid
	event references of persons
	* src/plugins/Check.py: Check for invalid event references of persons

2005-03-31  Don Allingham  <don@gramps-project.org>
	* src/AddSpouse.py: new database callback scheme. This scheme
	provides a registration mechanism to signal interested objects