@@ -1,4 +1,12 @@
 2005-04-01  Richard Taylor <rjt-gramps@thegrindstone.me.uk>
+	* src/DdTargets.py: added dnd type for media objects
+	* src/ImageSelect.py: altered dnd code to use gramps specific dnd target
+	when dnd is used between gramps windows.
+	* src/plugins/ScratchPad.py: added support for media object. This is still
+	a little simplistic. It would be nice to generate thumbnails as tooltips and
+	to access some of the image meta data in the ui.
+	
+2005-04-01  Richard Taylor <rjt-gramps@thegrindstone.me.uk>
 	* src/ImageSelect.py (Gallery.on_drag_begin): tiny fix to correct image dnd
 
 2005-04-01  Richard Taylor <rjt-gramps@thegrindstone.me.uk>
